Added correct Request schema for flask app, proper results display in html

--- a/web-app/templates/show_results.html
+++ b/web-app/templates/show_results.html
@@ -45,8 +45,10 @@
                     <li>
                         <strong>{{ service.type }}</strong><br>
                         Name: {{ service.name }}<br>
-                        Distance: {{ service.distance }} mi<br>
+                        Urgency: {{service.urgency}} <br>
+                        Distance: {{ service.travel_distance }} mi<br>
                         ETA: {{ service.travel_time }} mins
+
                     </li>
                 {% endfor %}
             </ul>
