fixed return to home bug in map.html

--- a/web-app/templates/map.html
+++ b/web-app/templates/map.html
@@ -45,7 +45,7 @@
     <!-- MAP GOES HERE -->
     <div id="map"></div>
 
-    <a href="/show-results">← Back to Results</a>
+    <a href="javascript:window.history.back();">← Back to Results</a>
 
     <!-- Leaflet JS -->
     <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
