--- a/web-app/templates/show_results.html
+++ b/web-app/templates/show_results.html
@@ -56,7 +56,7 @@
         {% else %}
             <p>Can't find any services near you. Check back later.</p>
         {% endif %}
-        <a href="/map">🗺️ View Full Map</a>
+        <a href="/map">View Full Map</a>
         <a href="/">Return home</a>
     </div>
 </body>
