Restoring WebApp functionality and Enabling Saved Metadata

--- a/web-app/templates/home.html
+++ b/web-app/templates/home.html
@@ -41,7 +41,7 @@
 <body>
     <div class="container">
         <h1>Find Emergency Services Near You</h1>
-        <p>We will locate the nearest hospital, fire station, or police station to your location.</p>
+        <p>We will locate the nearest fire station to your location.</p>
         <button onclick="getLocation()">Share My Location</button>
         <p id="location"></p>
     </div>
